--- a/carusel.html
+++ b/carusel.html
@@ -14,45 +14,45 @@
   <div class="carusel">
     <h1>JS Carusel</h1>
     <div class="carusel__container">
-      <div class="carusel__items">
-        <button class='carusel__prev-button' style="display: none"></button>
-        <div class="carusel__item">
+      <button class='carusel__prev-button'> << </button>
+      <ul class="carusel__items">
+        <li class="carusel__item">
           <div class="carusel__quote">
               <p>It does not matter how slowly you go so long as you do not stop.</p> 
               <p> &#169; Confucius</p>
           </div>
-          <img class="carusel__img" src="./assets/сonfucius.jpg" alt="Confucius">
-        </div>
-        <div class="carusel__item">
+          <img class="carusel__img" src="./assets/confucius.jpg" alt="Confucius">
+        </li>
+        <li class="carusel__item">
           <div class="carusel__quote">
               <p>We are what we repeatedly do.</p> 
               <p>&#169; Aristotle</p>
           </div>
           <img class="carusel__img" src="./assets/aristotle.jpg" alt="Aristotle">
-        </div>
-        <div class="carusel__item">
+        </li>
+        <li class="carusel__item">
           <div class="carusel__quote">
-              <p>If you tell the truth you don't have to remember anything.</p>  The language of friendship is not words but meanings.
+              <p>If you tell the truth you don't have to remember anything.</p>
               <p>&#169; Mark Twain</p>
           </div>
           <img class="carusel__img" src="./assets/twain.jpg" alt="Mark Twain">
-        </div>
-        <div class="carusel__item">
+        </li>
+        <li class="carusel__item">
           <div class="carusel__quote">
               <p>The language of friendship is not words but meanings.</p>  
               <p>&#169; Henry David</p>
           </div>
           <img class="carusel__img" src="./assets/h-david.jpg" alt="Henry David">
-        </div>
-        <div class="carusel__item">
+        </li>
+        <li class="carusel__item">
           <div class="carusel__quote">
               <p>Success is not final, failure is not fatal: it is the courage to continue that counts.</p>  
               <p>&#169; Winston Churchill</p>
           </div>
           <img class="carusel__img" src="./assets/churchill.png" alt="Winston Churchill">
-        </div>
-      </div>
-      <button class='carusel__prev-button' style="display: none"></button>
+        </li>
+      </ul>
+      <button class='carusel__next-button'> >> </button>
     </div>
     <div class="carusel__about-me">
       <span>about me in</span>
