--- a/carusel.html
+++ b/carusel.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="./carusel.min.css">
   <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
-  <title>Carusel</title>
+  <title>Carousel</title>
 </head>
 <body>
   <div class="carusel">
-    <h1>JS Carusel</h1>
+    <h1>JS Carousel</h1>
     <div class="carusel__container">
       <button class='carusel__prev-button'> << </button>
       <ul class="carusel__items">
